# a8

./: .gitignore  Makefile  _CoqProject  dune-project  parse_json.py  shell.nix
extraction/: dune  extraction.v
src/: Asm.v  Decode.v  Hash.v  Rewrite.v  Util.v  dune  lief.cpp  lief.ml  main.ml  packager.ml  policy.ml  util.ml
src/abort/: abort.c  dune  runtime.c  runtime.h
src/packager/: dune  lief.cpp  lief.ml  packager.ml
src/runtime/: dune  gen_library.ml  gen_rules.ml  link.ld  polhook.c  runtime.c  runtime.h
theories/: Asm.v  Decode.v  ELF.v  Hash.v  I2N.v  Rewrite.v  Strl.v  Util.v  dune
theories/proof/: ELF.v  I2N.v  Strl.v  dune
