(rule
 (targets abort.elf)
 (action
  (progn
   (run a64-gcc
        -c -ffreestanding -fno-stack-protector -nostdlib
        %{dep:abort.c} -o a.o)
   (run a64-ld
        -T %{dep:link.ld} -nostdlib a.o -o %{targets}))))

(rule
 (targets abort.bin)
 (action
  (run a64-objcopy
       -O binary -j .text -j .got -j .got.plt %{dep:abort.elf} %{targets})))

(rule
 (target abort.ml)
 (deps abort.bin)
 (action
  (with-stdout-to %{target}
   (run ocaml -e
    "let data = In_channel.with_open_bin \"%{deps}\" In_channel.input_all in
     Printf.printf \"let data = \\\"%s\\\"\\n\" (String.escaped data)"
   ))))

(library
 (name abort)
 (modules abort))
